# os-main

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile.release  Makefile  README.md  README_INFER.md  index.html  kolibri.sh  kolibri.wasm  kolibri_trace.jsonl  requirements.txt  temp.theta.csv  temp.theta.json
.github/: copilot-instructions.md
.github/workflows/: build_release.yml  ci.yml  deploy_frontend.yml  python-ci.yml
apps/: kolibri_infer  kolibri_infer.c  kolibri_node.c  ks_compiler
assets/: index-BizhGa77.js  index-gCfTiEUD.css
backend/agent/: __init__.py  engine.py  main.py
backend/federation/: __init__.py  delta.py  merge.py  router.py
backend/feedback_service/: __init__.py  repository.py  schemas.py  theta.py
backend/include/: knp_core.h
backend/include/kolibri/: formula.h  genome.h  script.h
backend/infer_api/: main.py
backend/src/: formula.c  genome.c  knp_core.c  script.c  wasm_bridge.c  wasm_genome_stub.c
core/: agent.py  inference.py  kolibri_sim.py  llm_adapter.py  memory.py  representations.py
core/kolibri_script/: __init__.py  genome.py
data/: knp_theta.csv  knp_theta.json  long_term_memory.jsonl  rlhf_feedback.jsonl
deploy/: README.md
deploy/k8s/: backend.yaml
docs/: CONTRIBUTING.md  Makefile  api.rst  conf.py  conflict_resolution.md  decimal_cognition.md  developer_guide.md  federation.rst  index.rst  overview.rst  project_plan.md  project_status.md  release_draft.md  release_notes.md  release_notes_template.md  release_process.md  sdk.rst  selfcontained.md  status_analysis.md
frontend/: .eslintrc.cjs  .gitignore  CNAME  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: kolibri.wasm.txt
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatView.tsx  FeedbackForm.tsx  Layout.tsx  NavItem.tsx  Sidebar.tsx  SuggestionCard.tsx  TracePanel.tsx  WelcomeScreen.tsx
frontend/src/core/: agent.ts  api.ts  knowledge.ts  kolibri-bridge.ts  wasi.ts
frontend/src/core/__tests__/: knowledge.test.ts
frontend/src/desktop/: Desktop.tsx  README.md  Taskbar.tsx  Window.tsx
frontend/src/desktop/apps/: TerminalApp.tsx
frontend/src/styles/: tailwind.css
frontend/src/types/: chat.ts  feedback.ts  knowledge.ts
kolibri_os/: Makefile  README.md
kolibri_os/boot/: boot.asm
kolibri_os/iso/boot/: kernel.elf
kolibri_os/iso/boot/grub/: grub.cfg
kolibri_os/kernel/: kernel.c  link.ld
scripts/: README.md  __init__.py  build_iso.sh  build_sdk.sh  build_wasm.sh  ci_bootstrap.sh  package_release.sh  profile_infer.py  release.sh  resolve_conflicts.py  run_all.sh  run_cluster.sh  run_local.sh  simulate_swarm.py  soak.py
sdk/js/: package-lock.json  package.json  tsconfig.json
sdk/js/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/kolibri_sdk/: __init__.py  cli.py  client.py
sdk/python/kolibri_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_federation.py  test_formula.c  test_genome.c  test_knp_core.c  test_kolibri_sim.py  test_main.c  test_script.c  test_swarm.py  test_theta_updater.py
tests/kolibri_script/: test_genome.py  test_parser.py
training/: Dockerfile
